--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Spring-Boot
+
+managment.endpoints.web.exposure.include=*
+
+spring.devtools.restart.enabled=true
+
+# credentials
+spring.security.user.name=pixel
+spring.security.user.password=academy
+
+#exclude info and health endpoints
+management.endpoints.web.exposure.exclude=info,health
