--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.devtools.restart.enabled=true
 spring.security.user.name=pixel
 spring.security.user.password=academy
 
-#exclude info and health endpoints
-management.endpoints.web.exposure.exclude=info,health
+# include info and health endpoints
+management.endpoints.web.exposure.include=health,info
+
+info.app.name=spring-boot-lab
+info.app.version=1.0.0
